--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,98 +1,8 @@
-
-<div class="ctn-inicio-projects">
-
-  <h3>{{"proyectos.titulo" | translate}}</h3>
-  <p class="txt-descripcion">{{"proyectos.desc" | translate}}</p>
+<div class="text-center mt-5">
+  <h3 class="text-2xl font-semibold">{{ "proyectos.titulo" | translate }}</h3>
+  <p class="txt-descripcion mb-3">{{ "proyectos.desc" | translate }}</p>
   <div class="ctn-swiper">
     <app-swiper-desktop></app-swiper-desktop>
     <app-swiper-mobile></app-swiper-mobile>
-    
   </div>
-  
-  <!-- <div id="carousel">
-    
-    <div [class]="estilos[0].valor" id="HideLeft">
-      <figure>
-        <img src="https://i1.sndcdn.com/artworks-000165384395-rhrjdn-t500x500.jpg">
-        <figcaption>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti accusantium dignissimos voluptatem libero quibusdam.</p>
-          <a class="a_git" href="">GitHub</a>
-          <a class="a_view" href="">Vista previa</a>
-        </figcaption>
-      </figure>
-    </div>
-
-    <div [class]="estilos[1].valor" id="PrevLeftSecond">
-      <figure>
-        <img src="https://i1.sndcdn.com/artworks-000185743981-tuesoj-t500x500.jpg">
-        <figcaption>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti accusantium dignissimos voluptatem libero quibusdam.</p>
-        <a class="a_git" href="">GitHub</a>
-        <a class="a_view" href="">Vista previa</a>
-      </figcaption>
-      </figure>
-    </div>
-
-    <div [class]="estilos[2].valor" id="Prev">
-      <figure>
-        <img src="https://i1.sndcdn.com/artworks-000158708482-k160g1-t500x500.jpg">
-        <figcaption>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti accusantium dignissimos voluptatem libero quibusdam.</p>
-        <a class="a_git" href="">GitHub</a>
-        <a class="a_view" href="">Vista previa</a>
-      </figcaption>
-      </figure>
-    </div>
-
-    <div [class]="estilos[3].valor" id="Selected" (document:mousemove)="onMouseMove($event)">
-      <figure>
-        <img  src="https://i1.sndcdn.com/artworks-000108468163-dp0b6y-t500x500.jpg">
-        <figcaption>
-        <p>Landing Page para la empresa Aristos Soluciones S.A</p>
-        <a class="a_git" href="https://github.com/JorgeAstaiza/AristosSoluciones">GitHub</a>
-
-      </figcaption>
-      </figure>
-    </div>
-
-    <div [class]="estilos[4].valor" id="Next">
-      <figure>
-        <img src="https://i1.sndcdn.com/artworks-000028787381-1vad7y-t500x500.jpg">
-        <figcaption>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti accusantium dignissimos voluptatem libero quibusdam.</p>
-        <a class="a_git" href="">GitHub</a>
-        <a class="a_view" href="">Vista previa</a>
-      </figcaption>
-      </figure>
-    </div>
-
-    <div [class]="estilos[5].valor" id="NextRightSecond">
-      <figure>
-        <img src="https://i1.sndcdn.com/artworks-000108468163-dp0b6y-t500x500.jpg">
-        <figcaption>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti accusantium dignissimos voluptatem libero quibusdam.</p>
-        <a class="a_git" href="">GitHub</a>
-        <a class="a_view" href="">Vista previa</a>
-      </figcaption>
-      </figure>
-    </div>
-
-    <div [class]="estilos[6].valor" id="HideRight">
-      <figure>
-        <img src="https://i1.sndcdn.com/artworks-000064920701-xrez5z-t500x500.jpg">
-        <figcaption>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti accusantium dignissimos voluptatem libero quibusdam.</p>
-        <a class="a_git" href="">GitHub</a>
-        <a class="a_view" href="">Vista previa</a>
-      </figcaption>
-      </figure>
-    </div>
-
-  </div>
-
-  <div class="buttons">
-    <button type="button" class="btn btn-info" id="prev" (click)="moveProject('prev')"><ngx-emoji size:16 emoji=":arrow_backward::skin-tone-3:" ></ngx-emoji></button>
-    <button type="button" class="btn btn-info" id="next" (click)="moveProject('next')"><ngx-emoji size:16 emoji=":arrow_forward::skin-tone-3:" ></ngx-emoji></button>
-  </div>  -->
-
 </div>
