--- a/src/app/pages/projects/swiper-desktop/swiper-desktop.component.html
+++ b/src/app/pages/projects/swiper-desktop/swiper-desktop.component.html
@@ -1,91 +1,169 @@
 <swiper [config]="config" class="swiper">
-    <ng-template swiperSlide class="swiper__item swiper-slide item-project">
-      <div class="swiper__img">
-        <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Aristos Soluciones">
-      </div>
-      <div class="swiper__content">
-        <span class="swiper__code">{{"proyectos.proy-1.fecha" | translate}}</span>
-        <div class="swiper__title">Aristos Soluciones S.A.S</div>
-        <div class="swiper__text">{{"proyectos.proy-1.desc" | translate}}</div>
-        <div class="ctn-stack">
-          <label for="">{{"proyectos.tecnologias" | translate}}</label>
-          <p>HTML</p>
-          <p>Boostrap</p>
-          <p>Node.js</p>
-        </div>
-        <div class="ctn-button-projects">
-          <a href="#" class="swiper__button">Demo</a>
-          <a href="https://github.com/JorgeAstaiza/AristosSoluciones" target="_blank" class="swiper__button">Github</a>
-        </div>
-      </div>
-    </ng-template>
+  <ng-template swiperSlide class="swiper__item swiper-slide item-project">
+    <div class="swiper__img">
+      <img
+        src="https://plus.unsplash.com/premium_photo-1674499074438-8f611a3569f6?q=80&w=2669&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="Citobot"
+      />
+    </div>
 
-    <ng-template swiperSlide class="swiper__item swiper-slide item-project">
-      <div class="swiper__img">
-        <img src="https://images.unsplash.com/photo-1509785307050-d4066910ec1e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1028&q=80" alt="SERCOR">
+    <div class="swiper__content">
+      <span class="swiper__code">{{
+        "proyectos.proy-5.fecha" | translate
+      }}</span>
+      <div class="swiper__title">Citobot</div>
+      <div class="swiper__text">{{ "proyectos.proy-5.desc" | translate }}</div>
+      <div class="ctn-stack">
+        <label for="">{{ "proyectos.tecnologias" | translate }}</label>
+        <p>Angular</p>
+        <p>Angular Material</p>
+        <p>Node.js</p>
+        <p>Express</p>
+        <p>Express</p>
+        <p>MySQL</p>
+        <p>AWS</p>
       </div>
-      <div class="swiper__content">
-        <span class="swiper__code">{{"proyectos.proy-2.fecha" | translate}}</span>
-        <div class="swiper__title">SERCOR</div>
-        <div class="swiper__text">{{"proyectos.proy-2.desc" | translate}}</div>
-        <div class="ctn-stack">
-          <label for="">{{"proyectos.tecnologias" | translate}}</label>
-          <p>HTML</p>
-          <p>CSS</p>
-          <p>Boostrap</p>
-          <p>Javascript</p>
-        </div>
-        <div class="ctn-button-projects">
-          <a href="https://sercoresahi.com/" target="_blank" class="swiper__button">Demo</a>
-          <a href="https://github.com/JorgeAstaiza/sercor" target="_blank" class="swiper__button">Github</a>
-        </div>
+      <div class="flex justify-center items-center mt-3">
+        <a
+          href="https://d39cwdw6an48d2.cloudfront.net/#/login"
+          class="swiper__button"
+          >Demo</a
+        >
       </div>
-    </ng-template>
-    
-    <ng-template swiperSlide class="swiper__item swiper-slide item-project">
-      <div class="swiper__img">
-        <img src="https://images.unsplash.com/photo-1528629297340-d1d466945dc5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1522&q=80" alt="Biclapp">
+    </div>
+  </ng-template>
+  <ng-template swiperSlide class="swiper__item swiper-slide item-project">
+    <div class="swiper__img">
+      <img
+        src="https://images.unsplash.com/photo-1558640476-437a2b9438a2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1642&q=80"
+        alt="Clean World"
+      />
+    </div>
+    <div class="swiper__content">
+      <span class="swiper__code">{{
+        "proyectos.proy-4.fecha" | translate
+      }}</span>
+      <div class="swiper__title">Clean World</div>
+      <div class="swiper__text">{{ "proyectos.proy-4.desc" | translate }}</div>
+      <div class="ctn-stack">
+        <label for="">{{ "proyectos.tecnologias" | translate }}</label>
+        <p>Angular</p>
+        <p>Angular material</p>
+        <p>Firebase</p>
+        <p>mysql</p>
+        <p>Node.js</p>
       </div>
-      <div class="swiper__content">
-        <span class="swiper__code">{{"proyectos.proy-3.fecha" | translate}}</span>
-        <div class="swiper__title">Biclapp</div>
-        <div class="swiper__text">{{"proyectos.proy-3.desc" | translate}}</div>
-        <div class="ctn-stack">
-          <label for="">{{"proyectos.tecnologias" | translate}}</label>
-          <p>Angular</p>
-          <p>Boostrap</p>
-          <p>Firebase</p>
-          <p>Chart.js</p>
-          <p>Node.js</p>
-        </div>
-        <div class="ctn-button-projects">
-          <!-- <a href="#" class="swiper__button">Demo</a> -->
-          <a href="https://github.com/JorgeAstaiza/backend-biclApp" target="_blank" class="swiper__button">Github</a>
-        </div>
+      <div class="flex justify-center items-center mt-3">
+        <!-- <a href="#" class="swiper__button">Demo</a> -->
+        <a
+          href="https://github.com/JorgeAstaiza/clean-world"
+          target="_blank"
+          class="swiper__button"
+          >Github</a
+        >
       </div>
-    </ng-template>
+    </div>
+  </ng-template>
 
-    <ng-template swiperSlide class="swiper__item swiper-slide item-project">
-      <div class="swiper__img">
-        <img src="https://images.unsplash.com/photo-1558640476-437a2b9438a2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1642&q=80" alt="Clean World">
+  <ng-template swiperSlide class="swiper__item swiper-slide item-project">
+    <div class="swiper__img">
+      <img
+        src="https://images.unsplash.com/photo-1509785307050-d4066910ec1e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1028&q=80"
+        alt="SERCOR"
+      />
+    </div>
+    <div class="swiper__content">
+      <span class="swiper__code">{{
+        "proyectos.proy-2.fecha" | translate
+      }}</span>
+      <div class="swiper__title">SERCOR</div>
+      <div class="swiper__text">{{ "proyectos.proy-2.desc" | translate }}</div>
+      <div class="ctn-stack">
+        <label for="">{{ "proyectos.tecnologias" | translate }}</label>
+        <p>HTML</p>
+        <p>CSS</p>
+        <p>Boostrap</p>
+        <p>Javascript</p>
       </div>
-      <div class="swiper__content">
-        <span class="swiper__code">{{"proyectos.proy-4.fecha" | translate}}</span>
-        <div class="swiper__title">Clean World</div>
-        <div class="swiper__text">{{"proyectos.proy-4.desc" | translate}}</div>
-        <div class="ctn-stack">
-          <label for="">{{"proyectos.tecnologias" | translate}}</label>
-          <p>Angular</p>
-          <p>Angular material</p>
-          <p>Firebase</p>
-          <p>mysql</p>
-          <p>Node.js</p>
-        </div>
-        <div class="ctn-button-projects">
-          <!-- <a href="#" class="swiper__button">Demo</a> -->
-          <a href="https://github.com/JorgeAstaiza/clean-world" target="_blank" class="swiper__button">Github</a>
-        </div>
+      <div class="flex justify-center items-center mt-3">
+        <a
+          href="https://sercoresahi.com/"
+          target="_blank"
+          class="swiper__button"
+          >Demo</a
+        >
+        <a
+          href="https://github.com/JorgeAstaiza/sercor"
+          target="_blank"
+          class="swiper__button"
+          >Github</a
+        >
       </div>
-    </ng-template>
+    </div>
+  </ng-template>
 
-  </swiper>
+  <ng-template swiperSlide class="swiper__item swiper-slide item-project">
+    <div class="swiper__img">
+      <img
+        src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+        alt="Aristos Soluciones"
+      />
+    </div>
+
+    <div class="swiper__content">
+      <span class="swiper__code">{{
+        "proyectos.proy-1.fecha" | translate
+      }}</span>
+      <div class="swiper__title">Aristos Soluciones S.A.S</div>
+      <div class="swiper__text">{{ "proyectos.proy-1.desc" | translate }}</div>
+      <div class="ctn-stack">
+        <label for="">{{ "proyectos.tecnologias" | translate }}</label>
+        <p>HTML</p>
+        <p>Boostrap</p>
+        <p>Node.js</p>
+      </div>
+      <div class="flex justify-center items-center mt-3">
+        <a href="#" class="swiper__button">Demo</a>
+        <a
+          href="https://github.com/JorgeAstaiza/AristosSoluciones"
+          target="_blank"
+          class="swiper__button"
+          >Github</a
+        >
+      </div>
+    </div>
+  </ng-template>
+
+  <ng-template swiperSlide class="swiper__item swiper-slide item-project">
+    <div class="swiper__img">
+      <img
+        src="https://images.unsplash.com/photo-1528629297340-d1d466945dc5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1522&q=80"
+        alt="Biclapp"
+      />
+    </div>
+    <div class="swiper__content">
+      <span class="swiper__code">{{
+        "proyectos.proy-3.fecha" | translate
+      }}</span>
+      <div class="swiper__title">Biclapp</div>
+      <div class="swiper__text">{{ "proyectos.proy-3.desc" | translate }}</div>
+      <div class="ctn-stack">
+        <label for="">{{ "proyectos.tecnologias" | translate }}</label>
+        <p>Angular</p>
+        <p>Boostrap</p>
+        <p>Firebase</p>
+        <p>Chart.js</p>
+        <p>Node.js</p>
+      </div>
+      <div class="flex justify-center items-center mt-3">
+        <!-- <a href="#" class="swiper__button">Demo</a> -->
+        <a
+          href="https://github.com/JorgeAstaiza/backend-biclApp"
+          target="_blank"
+          class="swiper__button"
+          >Github</a
+        >
+      </div>
+    </div>
+  </ng-template>
+</swiper>
