--- a/src/app/pages/container/container.component.scss
+++ b/src/app/pages/container/container.component.scss
@@ -1,31 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
-.body-inicio {
-    text-align: center;
-    display: flex;
-    align-items: center;
-    
-    flex-direction: column;
-}
-.ctn-inicio {
-    background-color: white;
-    margin: 0 auto;
-    height: 90vh;
-    border-radius: 20px;
-    box-shadow:  0px 0px 28px -9px rgba(51, 51, 51, 0.75);
-    border: none;
-    background-color: rgb(143 143 143 / 52%);
-    backdrop-filter: blur(10px);
-}
+
 .ctn-boton-menu {
     display: none;
   }
 
-.content {
-    flex-shrink: 1;
-    flex-grow: 1;
-    padding: 50px 0;
-    position: relative;
-}
 
 .ctn-boton-close {
     height: 30px;
@@ -64,6 +42,7 @@
     .ctn-boton-menu{
         display: block;
         position: fixed;
+        left: 0;
         text-align: initial;
         margin-left: 10px;
         button {
@@ -75,8 +54,9 @@
         background-color: rgba(109, 109, 109, 0.905);
         width: 210px;
         position: fixed;
+        left: 0;
         height: auto;
-        transition-duration: 500ms !important;
+        transition-duration: 300ms !important;
         border-bottom-right-radius: 30px;
         border-top-right-radius: 30px;
         overflow: hidden;
@@ -86,21 +66,28 @@
             list-style: none;
             width: 100%;
             margin-top: 40px;
+            margin-left: 10px;
             
             li {
                 padding: 20px 0;
                 margin: 10px 0;
                 border-left: 3px solid rgb(68, 68, 68);
                 font-family: 'Hubballi', cursive;
-                font-size: 20px;
+                font-size: 25px;
+                padding-left: 20px;
+             
+                a {
+                    color: white;
+                
+                }
             }
         }
     }
     .menu-oculto {
         width: 0;
-        left: 0;
+        left: -210px;
         height: auto;
-        transition-duration: 500ms !important;
+        transition-duration: 0ms !important;
         overflow: hidden;
         margin-top: -65px;
         ul {
