--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,58 +1,114 @@
-<div class="ctn-inicio">
-    <div class="ctn-idioma">
-        <p>{{"inicio.idioma" | translate}}</p>
-        <select class="form-select ctn-img-inicio__idioma" #langSelect (change)="translate.use(langSelect.value)">
-            <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang }}</option>
-        </select>
-    </div>
-    <div class="container ctn-info-page">
-        <div class="row align-items-center ctn-info-page-inicio">
-            <div class="col" >
-                <div class="ctn-info-page__texto ctn-texto">
-                    <div class="ctn-info-page__redes">
-                        <a target="_blank" href="https://www.linkedin.com/in/jorge-alexander-astaiza-cordoba-126671173/">
-                            <img title="Linkedin" src="../../../assets/img/linkedin.png" alt="">
-                        </a>
-                        <a target="_blank" href="https://twitter.com/AlexCordobaInc">
-                            <img title="Twitter" src="../../../assets/img/twitter.png" alt="">
-                        </a>
-                        <a target="_blank" href="https://www.instagram.com/alex_cordoba___/">
-                            <img title="Instagram" src="../../../assets/img/instagram.png" alt="">
-                        </a>
-                        <a target="_blank" href="https://medium.com/@alexandercordoba.dev">
-                            <img title="Blog" src="../../../assets/img/blog.png" alt="">
-                        </a>
-                        <a class="btn-cv" target="_blank" href="../../../assets/cv/currículum_Jorge_Astaiza_I.pdf" target="_blank" download="curriculum.pdf">
-                            <img title="Curriculum" src="../../../assets/img/cv.png" alt="">
-                        </a>
-                    </div>
-                    <h2 class="ctn-info-page__title">Jorge Alexander Córdoba</h2>
-
-                    <div class="content">
-                        <div class="content__container">
-                          <ul class="content__container__list">
-                            <li class="content__container__list__item">Frontend Developer...</li>
-                            <li class="content__container__list__item">Angular Developer...</li>
-                            <li class="content__container__list__item">Mobile Developer...</li>
-                            <li class="content__container__list__item">Forever Student <ngx-emoji size:16 emoji=":brain::skin-tone-3:" ></ngx-emoji></li>
-                          </ul>
-                        </div>
-                    </div>
-
-                    <p class="txt-description">{{ "inicio.descripcion" | translate}}</p>
-                    
-                </div>
-            </div>
-            <div class="col align-self-center ctn-img-inicio" >
-                
-                <img class="img-avatar" src="../../../assets/img/avatar2.png" alt="Me">
-            </div>
+<div class="flex flex-col justify-start lg:justify-center lg:h-screen">
+  <div class="flex justify-end mr-7 items-center">
+    <p class="mr-3 text-lg">{{ "inicio.idioma" | translate }}</p>
+    <select
+      class="form-select ctn-img-inicio__idioma"
+      #langSelect
+      (change)="translate.use(langSelect.value)"
+    >
+      <option
+        *ngFor="let lang of translate.getLangs()"
+        [value]="lang"
+        [selected]="lang === translate.currentLang"
+      >
+        {{ lang }}
+      </option>
+    </select>
+  </div>
+  <div class="flex flex-col items-center w-full lg:flex-row lg:justify-center">
+    <div
+      class="flex flex-col justify-center items-center w-full lg:w-1/3 lg:mr-3"
+    >
+      <div class="flex flex-row justify-center gap-2 mb-3 mt-3 md:mt-0">
+        <a
+          target="_blank"
+          href="https://www.linkedin.com/in/jorge-alexander-astaiza-cordoba-126671173/"
+        >
+          <img
+            class="w-9"
+            title="Linkedin"
+            src="../../../assets/img/linkedin.png"
+            alt=""
+          />
+        </a>
+        <a target="_blank" href="https://twitter.com/AlexCordobaInc">
+          <img
+            class="w-9"
+            title="Twitter"
+            src="../../../assets/img/twitter.png"
+            alt=""
+          />
+        </a>
+        <a target="_blank" href="https://www.instagram.com/alex_cordoba___/">
+          <img
+            class="w-9"
+            title="Instagram"
+            src="../../../assets/img/instagram.png"
+            alt=""
+          />
+        </a>
+        <a target="_blank" href="https://medium.com/@alexandercordoba.dev">
+          <img
+            class="w-9"
+            title="Blog"
+            src="../../../assets/img/blog.png"
+            alt=""
+          />
+        </a>
+        <a
+          class="btn-cv"
+          target="_blank"
+          href="../../../assets/cv/currículum_Jorge_Astaiza_I.pdf"
+          target="_blank"
+          download="curriculum.pdf"
+        >
+          <img
+            class="w-9"
+            title="Curriculum"
+            src="../../../assets/img/cv.png"
+            alt=""
+          />
+        </a>
+      </div>
+      <h2 class="text-2xl">Jorge Alexander Córdoba</h2>
+      <div style="position: relative; height: 100px">
+        <div class="content">
+          <div class="content__container">
+            <ul class="content__container__list">
+              <li class="content__container__list__item">
+                Frontend Developer...
+              </li>
+              <li class="content__container__list__item">
+                Backend Developer...
+              </li>
+              <li class="content__container__list__item">
+                Mobile Developer...
+              </li>
+              <li class="content__container__list__item">
+                Gamer <i class="fa fa-gamepad" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
+
+      <p class="txt-description text-2xl w-full md:w-5/6 lg:w-full">
+        {{ "inicio.descripcion" | translate }}
+      </p>
     </div>
-    <div class="ctn-animation-scroll">
+
+    <img
+      class="hidden lg:block lg:w-1/3 lg:ml-3"
+      src="../../../assets/img/avatar2.png"
+      alt="Me"
+    />
+  </div>
+
+  <div class="w-full flex justify-center items-center mt-5">
+    <div class="hidden md:flex md:items-center">
       <div class="chevron"></div>
       <div class="chevron"></div>
       <div class="chevron"></div>
-      <span class="text-scroll">Scroll down</span>
     </div>
+  </div>
 </div>
