--- a/src/app/pages/my-services/my-services.component.html
+++ b/src/app/pages/my-services/my-services.component.html
@@ -1,44 +1,61 @@
-  <div class="ctn-inicio-services">
-      <div class="ctn-skills-services">
-        <app-skills></app-skills>
-        <div class="ctn-skills-services__swiper ctn-swiper">
-          <h3 class="ctn-skills-services__title">{{"servicios.titulo" | translate }}</h3>
-          <swiper [effect]="'cards'" [grabCursor]="true" class="mySwiper">
-            <ng-template swiperSlide>
-              <div class="card">
-                <img class="card-img-top" src="../../../assets/img/landing-page-icon.png" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Landing pages</h5>
-                  <p class="card-text">{{"servicios.landing-page-desc" | translate}}</p>
-                </div>
-              </div>
-            </ng-template>
-            <ng-template swiperSlide>
-              <div class="card">
-                <img class="card-img-top" src="../../../assets/img/web-application-icon.png" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">{{"servicios.app-web-titulo" | translate}}</h5>
-                  <p class="card-text">{{"servicios.app-web-desc" | translate}}</p>
-                </div>
-              </div>
-            </ng-template>
-            <ng-template swiperSlide>
-              <div class="card card-mobile">
-                <img class="card-img-top" src="../../../assets/img/mobile-application-icon.png"  alt="Card image cap">
-                <div class="card-body card-info-mobile">
-                  <h5 class="card-title">{{"servicios.app-moviles-titulo" | translate}}</h5>
-                  <p class="card-text">{{"servicios.app-moviles-desc" | translate}}</p>
-                </div>
-              </div>
-            </ng-template>
-            <!-- <ng-template swiperSlide>Slide 4</ng-template
-            ><ng-template swiperSlide>Slide 5</ng-template
-            ><ng-template swiperSlide>Slide 6</ng-template
-            ><ng-template swiperSlide>Slide 7</ng-template
-            ><ng-template swiperSlide>Slide 8</ng-template
-            ><ng-template swiperSlide>Slide 9</ng-template> -->
-          </swiper>
-        </div>
-      </div>
-
+<div class="flex flex-col justify-center w-full mt-5 mb-5">
+  <div class="flex flex-col items-center lg:flex-row lg:justify-evenly">
+    <app-skills></app-skills>
+    <div class="flex flex-col">
+      <h3 class="text-2xl text-center font-semibold mb-3">
+        {{ "servicios.titulo" | translate }}
+      </h3>
+      <swiper [effect]="'cards'" [grabCursor]="true" class="mySwiper">
+        <ng-template swiperSlide>
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="../../../assets/img/landing-page-icon.png"
+              alt="Card image cap"
+            />
+            <div class="p-2 md:ml-3 md:mr-3">
+              <h5 class="card-title">Landing pages</h5>
+              <p class="text-xl font-normal text-black">
+                {{ "servicios.landing-page-desc" | translate }}
+              </p>
+            </div>
+          </div>
+        </ng-template>
+        <ng-template swiperSlide>
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="../../../assets/img/web-application-icon.png"
+              alt="Card image cap"
+            />
+            <div class="p-2 md:ml-3 md:mr-3">
+              <h5 class="card-title">
+                {{ "servicios.app-web-titulo" | translate }}
+              </h5>
+              <p class="text-xl font-normal text-black">
+                {{ "servicios.app-web-desc" | translate }}
+              </p>
+            </div>
+          </div>
+        </ng-template>
+        <ng-template swiperSlide>
+          <div class="card card-mobile">
+            <img
+              class="card-img-top"
+              src="../../../assets/img/mobile-application-icon.png"
+              alt="Card image cap"
+            />
+            <div class="p-2 md:ml-3 md:mr-3">
+              <h5 class="card-title">
+                {{ "servicios.app-moviles-titulo" | translate }}
+              </h5>
+              <p class="text-xl font-normal text-black">
+                {{ "servicios.app-moviles-desc" | translate }}
+              </p>
+            </div>
+          </div>
+        </ng-template>
+      </swiper>
+    </div>
   </div>
+</div>
