--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,60 +1,76 @@
-<div class="ctn-logo">
-    <h3 class="sub-title">{{"servicios.habilidades.titulo" | translate}}</h3>
-    <div class="ctn-skills">
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icon-firebase.png" alt="Firebase" >
-            <p>Firebase</p>
-        </div>
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icono-angular.png" alt="Angular" >
-            <p>Angular</p>
-        </div>
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icono-boostrap.png" alt="Boostrap" >
-            <p>Boostrap</p>
-        </div>
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icono-css.png" alt="CSS" >
-            <p>CSS</p>
-        </div>
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icono-debian.png" alt="Linux" >
-            <p>Linux</p>
-        </div>
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icono-html.png" alt="HTML" >
-            <p>HTML</p>
-        </div>
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icono-js.png" alt="Javascript" >
-            <p>Javascript</p>
-        </div>
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icono-ts.png" alt="Typescript" >
-            <p>Typescript</p>
-        </div>    
+<div class="flex flex-col justify-center items-center flex-wrap w-full">
+  <h3 class="text-2xl text-center font-semibold mb-3">
+    {{ "servicios.habilidades.titulo" | translate }}
+  </h3>
+  <div class="flex flex-row justify-center flex-wrap w-11/12">
+    <div class="ctn-img-logo">
+      <img
+        class="logo"
+        src="../../../assets/img/icon-firebase.png"
+        alt="Firebase"
+      />
+      <p>Firebase</p>
     </div>
-    <h3 class="sub-title title-learning">{{"servicios.habilidades.aprendiendo" | translate}}</h3>
-    <div class="ctn-learning">
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icono-python.png" alt="Python" >
-            <p>Python</p>
-        </div>
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icono-node.png" alt="Node" >
-            <p>Node.js</p>
-        </div>
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icono-flutter.png" alt="Flutter" >
-            <p>Flutter</p>
-        </div>
-        <div class="ctn-img-logo">
-            <img class="logo" src="../../../assets/img/icon-react.png" alt="React" >
-            <p>React</p>
-        </div>
+    <div class="ctn-img-logo">
+      <img
+        class="logo"
+        src="../../../assets/img/icono-angular.png"
+        alt="Angular"
+      />
+      <p>Angular</p>
     </div>
-    
-    
-            
-    
+    <div class="ctn-img-logo">
+      <img
+        class="logo"
+        src="../../../assets/img/icono-boostrap.png"
+        alt="Boostrap"
+      />
+      <p>Boostrap</p>
+    </div>
+    <div class="ctn-img-logo">
+      <img class="logo" src="../../../assets/img/icono-css.png" alt="CSS" />
+      <p>CSS</p>
+    </div>
+    <div class="ctn-img-logo">
+      <img class="logo" src="../../../assets/img/icono-html.png" alt="HTML" />
+      <p>HTML</p>
+    </div>
+    <div class="ctn-img-logo">
+      <img
+        class="logo"
+        src="../../../assets/img/icono-js.png"
+        alt="Javascript"
+      />
+      <p>Javascript</p>
+    </div>
+    <div class="ctn-img-logo">
+      <img
+        class="logo"
+        src="../../../assets/img/icono-ts.png"
+        alt="Typescript"
+      />
+      <p>Typescript</p>
+    </div>
+    <div class="ctn-img-logo">
+      <img class="logo" src="../../../assets/img/icono-node.png" alt="Node" />
+      <p>Node.js</p>
+    </div>
+    <div class="ctn-img-logo">
+      <img class="logo" src="../../../assets/img/icon-react.png" alt="React" />
+      <p>React</p>
+    </div>
+  </div>
+  <h3 class="text-xl font-semibold mb-2 mt-2">
+    {{ "servicios.habilidades.aprendiendo" | translate }}
+  </h3>
+  <div class="ctn-learning">
+    <div class="ctn-img-logo">
+      <img
+        class="logo"
+        src="../../../assets/img/flutter-icon.png"
+        alt="Flutter"
+      />
+      <p>Flutter</p>
+    </div>
+  </div>
 </div>
