--- a/src/app/pages/timeline/timeline.component.html
+++ b/src/app/pages/timeline/timeline.component.html
@@ -1,61 +1,148 @@
-
-<div class="ctn-inicio">
-    <h3>{{"trayectoria.titulo" | translate}}</h3>
-    <p class="txt-description">{{"trayectoria.desc" | translate}}</p>
-    <section class="horizontal-timeline-container">
-        <div class="timeline-block">
-            <div class="timeline-step-counter time-line-step-one">2018</div>
-            <div class="timeline-content">
-            <p>{{"trayectoria.2018" | translate}}</p>
-            </div>
-        </div>
-        <div class="timeline-block">
-            <div class="timeline-step-counter time-line-step-five">2019</div>
-            <div class="timeline-content">
-            <p>{{"trayectoria.2019" | translate}}</p>
-            </div>
-        </div>
-        <div class="timeline-block">
-            <div class="timeline-step-counter time-line-step-two">2019</div>
-            <div class="timeline-content">
-            <p>{{"trayectoria.2019-2" | translate}}</p>
-            </div>
-        </div>
-        <div class="timeline-block">
-            <div class="timeline-step-counter time-line-step-three">2020</div>
-            <div class="timeline-content">
-            <p>{{"trayectoria.2020" | translate}}</p>
-            </div>
-        </div>
-        <div class="timeline-block">
-            <div class="timeline-step-counter time-line-step-four">2021</div>
-            <div class="timeline-content">
-            <p>{{"trayectoria.2021" | translate}}</p>
-            </div>
-        </div>
-    </section>
-
-
-    <div id="content">
-        <ul class="timeline">
-            <li class="timeline-event" data-date="2021">
-            <h3 class="timeline-title-event">Frontend Asesoftware S.A.S</h3>
-            <p>{{"trayectoria.2021" | translate}}</p>
-            </li>
-            <li class="timeline-event" data-date="2020">
-            <h3 class="timeline-title-event">Graduacion universidad</h3>
-            <p>{{"trayectoria.2020" | translate}}</p>   
-            </li>
-            <li class="timeline-event" data-date="2019">
-            <h3 class="timeline-title-event">Frontend Sitis S.A.S</h3>
-            <p>{{"trayectoria.2019" | translate}}</p>
-            <p>{{"trayectoria.2019-2" | translate}}</p>
-            </li>
-            <li class="timeline-event" data-date="2018">
-            <h3 class="timeline-title-event">Hult Prize</h3>
-            <p>{{"trayectoria.2018" | translate}}</p> 
-            </li>
-        </ul>
+<div class="flex flex-col items-center w-3/5 ctn-inicio">
+  <h3 class="text-2xl text-center font-semibold mb-3">
+    {{ "trayectoria.titulo" | translate }}
+  </h3>
+  <p class="txt-description mb-4">{{ "trayectoria.desc" | translate }}</p>
+  <!-- <div class="w-full mb-3 md:w-3/4 md:mb-0" data-aos="fade-right">
+    <div class="card items-center shadow-lg md:md:w-1/3">
+      <img
+        class="w-11/12"
+        src="../../../assets/img/hospital-software.jpg"
+        alt="Card image cap"
+      />
+      <div class="card-body">
+        <p class="text-lg">
+          {{ "trayectoria.2019-2" | translate }}
+        </p>
+      </div>
     </div>
+  </div>
+  <div
+    class="w-full mb-3 md:w-3/4 md:mb-0 flex justify-end"
+    data-aos="fade-left"
+  >
+    <div class="card items-center shadow-lg md:w-1/3">
+      <img
+        class="w-11/12"
+        src="../../../assets/img/davienda-logo.png"
+        alt="Card image cap"
+      />
+      <div class="card-body">
+        <p class="text-lg">
+          {{ "trayectoria.2021" | translate }}
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="w-full mb-3 md:w-3/4 md:mb-0" data-aos="fade-right">
+    <div class="card items-center shadow-lg md:w-1/3">
+      <img
+        class="w-11/12"
+        src="../../../assets/img/citobot-logo.webp"
+        alt="Card image cap"
+      />
+      <div class="card-body">
+        <p class="text-lg">
+          {{ "trayectoria.2022" | translate }}
+        </p>
+      </div>
+    </div>
+  </div>
+  <div
+    class="w-full mb-3 md:w-3/4 md:mb-0 flex justify-end"
+    data-aos="fade-left"
+  >
+    <div class="card items-center shadow-lg md:w-1/3">
+      <img
+        class="w-11/12"
+        src="../../../assets/img/softserve-logo.jpg"
+        alt="Card image cap"
+      />
+      <div class="card-body">
+        <p class="text-lg">
+          {{ "trayectoria.2023" | translate }}
+        </p>
+      </div>
+    </div>
+  </div> -->
+
+  <!-- <div class="linea">
+    <div class="dates-container">
+      <div class="circulo-2019">
+        <span>2019</span>
+      </div>
+      <div class="circulo-2021">
+        <span>2021</span>
+      </div>
+      <div class="circulo-2022">
+        <span>2022</span>
+      </div>
+      <div class="circulo-2023">
+        <span>2023</span>
+      </div>
+    </div>
+  </div> -->
+
+  <ol class="relative border-s-2 border-gray-200 dark:border-gray-700">
+    <li class="mb-10 ms-4">
+      <div
+        class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+      ></div>
+      <time
+        class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+        >Julio 2022</time
+      >
+      <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+        Web UI Developer in SoftServe
+      </h3>
+      <p class="mb-4 text-xl font-normal text-black dark:text-gray-400">
+        {{ "trayectoria.2023" | translate }}
+      </p>
+    </li>
+    <li class="mb-10 ms-4">
+      <div
+        class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+      ></div>
+      <time
+        class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+        >Febrero 2022</time
+      >
+      <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+        FullStack developer
+      </h3>
+      <p class="text-xl font-normal text-black dark:text-gray-400">
+        {{ "trayectoria.2022" | translate }}
+      </p>
+    </li>
+    <li class="mb-10 ms-4">
+      <div
+        class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+      ></div>
+      <time
+        class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+        >Agosto 2021</time
+      >
+      <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+        Frontend Developer
+      </h3>
+      <p class="text-xl font-normal text-black dark:text-gray-400">
+        {{ "trayectoria.2021" | translate }}
+      </p>
+    </li>
+    <li class="ms-4">
+      <div
+        class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+      ></div>
+      <time
+        class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+        >Noviembre 2019</time
+      >
+      <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+        Frontend Developer
+      </h3>
+      <p class="text-xl font-normal text-black dark:text-gray-400">
+        {{ "trayectoria.2019-2" | translate }}
+      </p>
+    </li>
+  </ol>
 </div>
-  
